# voxel_game

./: .gitignore  CMakeLists.txt  OsgImGuiHandler.cpp  OsgImGuiHandler.h  README.md  array_slice.h  arraymesh.cpp  biomes.txt  block_thread_manager.h  common_enum.h  counting_time.cpp  counting_time.h  fixed_array.h  main.cpp  main_osg.cpp  main_qt.cpp  mainwidget.cpp  mainwidget.h  utility.h  voxel_game.pro  voxelblock.h  voxeldataloader.cpp  voxeldataloader.h  voxelmap.cpp  voxelmap.h  voxelterrain.cpp  voxelterrain.h  voxeltool.cpp  voxeltool.h  voxeltoolterrain.cpp  voxeltoolterrain.h
1-baseui/: baseui.pro  confirmbutton.cpp  confirmbutton.h  flipview.cpp  flipview.h  icons.qrc  imageviewer.cpp  imageviewer.h  listitem.cpp  listitem.h  listview.cpp  listview.h  listwidget.cpp  listwidget.h  popupdialog.h  switchbutton.cpp  switchbutton.h  widget.cpp  widget.h  wifilistitem.h
2-Collision/: Collision.pro  defines.h  math.h  section5.h  section5_2.h  section5_3.h  section6.h  section8_9_10_11.h
3-combineModelFilesToOne/: combineModelFilesToOne.pro  objworker.cpp  objworker.h  plyworker.cpp  plyworker.h  widget.cpp  widget.h
3-combineObjFilesToOne/: combineObjFilesToOne.pro  main.cpp
4-some_output_models/: meshDown0.5.ply  meshUp0.5.ply  sample.ply  sand.ply  voxelMesh1.5.ply
5-replaceFiles/: voxelBuffer.cpp  voxelBuffer.h
5-testHACD/: main.cpp  testHACD.pro
6-testVHACD/: btAlignedAllocator.cpp  main.cpp  testVHACD.pro
7-generateModelBySdf/: generateModelBySdf.pro  sdf3.cpp  sdf3.h
Collision/: matrix33.h  section12.h  section13.h  section3.h  section4.h  section7.h  vector2.h  vector3.h
baseui/: icons.qrc  popupdialog.cpp  widget.cpp  widget.h  wifilistitem.cpp  wifilistitem.h
biomes/: humidity.cpp  humidity.h  temperature.h  treevoxel.cpp  treevoxel.h
combineObjFilesToOne/: main.cpp
common/: Simplify.h  box.h  boxi.h  common.pri  (+7 more)
(+125 files in other folders)
